; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/sound/isa/msnd/extr_msnd.c_snd_msnd_capture_open.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/sound/isa/msnd/extr_msnd.c_snd_msnd_capture_open.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.snd_pcm_substream = type { %struct.snd_pcm_runtime* }
%struct.snd_pcm_runtime = type { i32, i32, i64 }
%struct.snd_msnd = type { %struct.snd_pcm_substream*, i64, i32 }

@F_AUDIO_READ_INUSE = common dso_local global i32 0, align 4
@snd_msnd_capture = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.snd_pcm_substream*)* @snd_msnd_capture_open to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @snd_msnd_capture_open(%struct.snd_pcm_substream* %0) #0 {
  %2 = alloca %struct.snd_pcm_substream*, align 8
  %3 = alloca %struct.snd_pcm_runtime*, align 8
  %4 = alloca %struct.snd_msnd*, align 8
  store %struct.snd_pcm_substream* %0, %struct.snd_pcm_substream** %2, align 8
  %5 = load %struct.snd_pcm_substream*, %struct.snd_pcm_substream** %2, align 8
  %6 = getelementptr inbounds %struct.snd_pcm_substream, %struct.snd_pcm_substream* %5, i32 0, i32 0
  %7 = load %struct.snd_pcm_runtime*, %struct.snd_pcm_runtime** %6, align 8
  store %struct.snd_pcm_runtime* %7, %struct.snd_pcm_runtime** %3, align 8
  %8 = load %struct.snd_pcm_substream*, %struct.snd_pcm_substream** %2, align 8
  %9 = call %struct.snd_msnd* @snd_pcm_substream_chip(%struct.snd_pcm_substream* %8)
  store %struct.snd_msnd* %9, %struct.snd_msnd** %4, align 8
  %10 = load i32, i32* @F_AUDIO_READ_INUSE, align 4
  %11 = load %struct.snd_msnd*, %struct.snd_msnd** %4, align 8
  %12 = getelementptr inbounds %struct.snd_msnd, %struct.snd_msnd* %11, i32 0, i32 2
  %13 = call i32 @set_bit(i32 %10, i32* %12)
  %14 = load %struct.snd_msnd*, %struct.snd_msnd** %4, align 8
  %15 = call i32 @snd_msnd_enable_irq(%struct.snd_msnd* %14)
  %16 = load %struct.snd_msnd*, %struct.snd_msnd** %4, align 8
  %17 = getelementptr inbounds %struct.snd_msnd, %struct.snd_msnd* %16, i32 0, i32 1
  %18 = load i64, i64* %17, align 8
  %19 = add nsw i64 %18, 12288
  %20 = load %struct.snd_pcm_runtime*, %struct.snd_pcm_runtime** %3, align 8
  %21 = getelementptr inbounds %struct.snd_pcm_runtime, %struct.snd_pcm_runtime* %20, i32 0, i32 2
  store i64 %19, i64* %21, align 8
  %22 = load %struct.snd_pcm_runtime*, %struct.snd_pcm_runtime** %3, align 8
  %23 = getelementptr inbounds %struct.snd_pcm_runtime, %struct.snd_pcm_runtime* %22, i32 0, i32 0
  store i32 12288, i32* %23, align 8
  %24 = load %struct.snd_pcm_runtime*, %struct.snd_pcm_runtime** %3, align 8
  %25 = getelementptr inbounds %struct.snd_pcm_runtime, %struct.snd_pcm_runtime* %24, i32 0, i32 2
  %26 = load i64, i64* %25, align 8
  %27 = load %struct.snd_pcm_runtime*, %struct.snd_pcm_runtime** %3, align 8
  %28 = getelementptr inbounds %struct.snd_pcm_runtime, %struct.snd_pcm_runtime* %27, i32 0, i32 0
  %29 = load i32, i32* %28, align 8
  %30 = call i32 @memset(i64 %26, i32 0, i32 %29)
  %31 = load %struct.snd_pcm_substream*, %struct.snd_pcm_substream** %2, align 8
  %32 = load %struct.snd_msnd*, %struct.snd_msnd** %4, align 8
  %33 = getelementptr inbounds %struct.snd_msnd, %struct.snd_msnd* %32, i32 0, i32 0
  store %struct.snd_pcm_substream* %31, %struct.snd_pcm_substream** %33, align 8
  %34 = load i32, i32* @snd_msnd_capture, align 4
  %35 = load %struct.snd_pcm_runtime*, %struct.snd_pcm_runtime** %3, align 8
  %36 = getelementptr inbounds %struct.snd_pcm_runtime, %struct.snd_pcm_runtime* %35, i32 0, i32 1
  store i32 %34, i32* %36, align 4
  ret i32 0
}

declare dso_local %struct.snd_msnd* @snd_pcm_substream_chip(%struct.snd_pcm_substream*) #1

declare dso_local i32 @set_bit(i32, i32*) #1

declare dso_local i32 @snd_msnd_enable_irq(%struct.snd_msnd*) #1

declare dso_local i32 @memset(i64, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
